# Panthera-WAM

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  windows-installer.yml
armd/: pyproject.toml
armd/src/armd/: __main__.py  camera.py  camera_service.py  control.py  dataset_service.py  dataset_worker.py  execution.py  grpc_service.py  hardware_loop.py  kinematics.py  motion.py  safety.py  server.py  state.py  teach.py
armd/src/armd/backend/: __init__.py  base.py  real.py  sim.py
armd/src/armd/camera/: __init__.py  __main__.py  backend.py  service.py
armd/tests/: test_camera.py  test_control.py  test_dataset.py  test_entrypoints.py  test_grpc_kinematics.py  test_grpc_motion.py  test_grpc_safety.py  test_grpc_v2.py  test_hardware_loop.py  test_idle_damping.py  test_kinematics.py  test_motion.py  test_real_backend.py  test_sim_backend.py
camera/: pyproject.toml
camera/src/panthera_camera/: __init__.py  __main__.py  backend.py  service.py
camera/tests/: test_camerad.py
camera/tools/: install-windows.ps1  run-windows.ps1
cli/: pyproject.toml
cli/src/panthera_cli/: __main__.py  client.py
cli/tests/: test_cli_smoke.py
deploy/: 99-panthera-ht.rules  README.md  armd.env.example  armd.pi5.env.example  armd.service.in  attach-wsl-usb.ps1  build-realsense-linux.sh  build-realsense-wsl.sh  build-wpf.ps1  camerad.service.in  install-pi5.sh  install-wsl.sh  overhead-camera.service.in  panthera-up.zsh  setup-dotnet9.ps1
docs/: CAMERA_DEVICES.md  CLI_PLAN.md  D405_WORKFLOW.md  FINAL_PLAN.md  MILESTONES.md  V1_ACCEPTANCE.md  VENDOR_MODIFICATIONS.md  WPF_PLAN.md  sdk-capability-audit.json
docs/blender/: README.md  analyze_link6_components.py  panthera_three_view_setup.py
docs/mockups/: PANTHERA_THREE_VIEW.md  mockup-A-fluent-console.html  mockup-B-fluent-cards.html  mockup-C-fluent-cockpit.html  mockup-D-orthographic-three-view.html  panthera-six-axis-three-view.html  serve-panthera-three-view.ps1
docs/mockups/assets/: panthera-ht-meshes.min.js
docs/mockups/tools/: build-panthera-three-view-meshes.py
proto/: arm.proto  camera.proto  dataset.proto  gen.sh
spikes/m0/: m0_1_estop_preempt.py  m0_2_movel_loop.py  m0_3_compute_split.py  m0_common.py
spikes/v1/: movel_cancel_acceptance.py
tools/: audit_sdk_contract.py
wpf/: Directory.Build.props  Panthera.Terminal.sln
wpf/installer/: Panthera-Terminal.iss  README.md
wpf/src/Panthera.Terminal.App/: App.xaml  App.xaml.cs  AppDiagnostics.cs  CadThreeView.xaml  CadThreeView.xaml.cs  CameraStreamHostedService.cs  MainWindow.xaml  MainWindow.xaml.cs  Panthera.Terminal.App.csproj  (+9 more)
wpf/tools/: generate-brand-assets.ps1  run-tests.cmd  run-ui-tests.cmd
(+40 files in other folders)
