[project]
name = "panthera-camera"
version = "0.1.0"
description = "Panthera-WAM 的 Windows 原生 RealSense D405 gRPC 采集服务"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "panthera-arm-proto",
    "grpcio>=1.82.1",
    "protobuf>=4.25",
]

[project.scripts]
camerad = "panthera_camera.__main__:main"

[project.optional-dependencies]
realsense = ["pyrealsense2==2.58.1.10581"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panthera_camera"]
