[project]
name = "panthera-cli"
version = "0.1.0"
description = "panthera-cli：armd 的命令行客户端（纯 gRPC，不直接碰硬件）"
requires-python = ">=3.10"
dependencies = [
    "panthera-arm-proto",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
panthera = "panthera_cli.__main__:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panthera_cli"]
